--add: matches played and goals

--- a/index.html
+++ b/index.html
@@ -7,13 +7,46 @@
   <title>Standings</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <h1>Premier League Standings</h1>
   
-  <div id="standings" class="standings"></div>
+  <div id="standings" class="standings">
+    <div class="standings-header">
+      <div class="matches-played">
+       <strong>#</strong>
+      </div>
+      <div class="team-name">
+        <strong>Team Name</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>Pts</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>MP</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>W</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>D</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>L</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>GF</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>GA</strong>  
+      </div>
+      <div class="matches-played">
+        <strong>GD</strong>  
+      </div>
+    </div>
+  </div>
   
   <script src="js/index.js"></script>
 </body>
