--add: web component

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
+  <script type="module" src="@chronos"></script>
 </head>
 <body>
-  <h1>Premier League Standings</h1>
+  <b7-frosted-glass id="menu">
+    <h1>Premier League Standings</h1>
+  </b7-frosted-glass>
   
   <div id="standings" class="standings">
     <div class="standings-header">
